Fix cover alignment

--- a/less/main.less
+++ b/less/main.less
@@ -267,6 +267,10 @@ h2 {
   flex: 1;
 }
 
+.music-album .details > h2 {
+  margin-top: 0;
+}
+
 .music-album .details .year {
   opacity: 0.6;
   font-size: 14px;
